C13: Fix Swagger documents
