# storage/api-docs/api-docs.json
@@ -16,13 +16,13 @@
     ],
     "paths": {
         "/api": {},
-        "/coupons": {
+        "/coupon-categories": {
             "get": {
                 "tags": [
-                    "Coupons"
+                    "Coupon Categories"
                 ],
-                "summary": "List coupons",
-                "operationId": "db8511137857d0a8eec11e851ecf6a01",
+                "summary": "List coupon-categories",
+                "operationId": "ffd8af5bc3e1f5ab79f6c927c27e83c2",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -74,13 +74,13 @@
                 ]
             }
         },
-        "/coupons/{coupon}": {
+        "/coupon-categories/{coupon-category}": {
             "put": {
                 "tags": [
-                    "Coupons"
+                    "Coupon Categories"
                 ],
-                "summary": "Update a coupon",
-                "operationId": "4fefdbcd515caa2eb124c254c107b00c",
+                "summary": "Update a coupon-categories",
+                "operationId": "07a7ffcd97093942ba3d8288c1a77ce9",
                 "parameters": [
                     {
                         "name": "name",
